Fix image alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -23,6 +23,7 @@ img {
 .info {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-width: 200px;
 }
 /* do not edit this footer */
